# AT-WEB-DRIVER

./: .env  .gitignore  README.md  abrir_amazon.py  conftest.py  dev-requirements.in  dev-requirements.txt  main.py  prueba_env.py  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS
Automation/: base_bot.py  playwright_constans.py  playwright_constants.py  playwright_utils.py  test_case.py
Automation/test_cases/: comprar_bot.py
api/routes/: bot_routes.py
automatio_fixed/: base_bot.py  playwright_constants.py
automation/: base_bot.py  playwright_constants.py  playwright_utils.py
automation/test_cases/: buy_bot.py  comprar_bot.py
config/: settings.py
config/logs/: logger_config.py
venv310/: pyvenv.cfg
venv310/Scripts/: activate  activate.bat
